--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-youtube": "^10.1.0",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://krupacsekhar.github.io/portfolio",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
